--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <title>Aplicación ToDo con Javascript</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-blue">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Caso de estudio: Aplicación ToDo con Javascript</a>
     <button
       class="navbar-toggler"
