--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/darkly/bootstrap.min.css"
     rel="stylesheet"
   />
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/styles.css">
   <title>Aplicación ToDo con Javascript</title>
 </head>
-<body>
+<body class="bg-dark text-light">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Caso de estudio: Aplicación ToDo con Javascript</a>
     <button
@@ -41,7 +43,7 @@
       </ul>
       <form class="form-inline my-2 my-lg-0" id="filters">
         <label class="font-weight-bold text-info mr-3">Filters</label>
-        <input type="radio" name="type" value="all" class="mx-1">
+        <input type="radio" name="type" value="all" class="mx-1" checked>
         <label for="male" class="mb-0">All</label>
         <input type="radio" name="type" value="completed" class="mx-1">
         <label for="female" class="mb-0">Completed</label>
@@ -101,17 +103,21 @@
             </div>
             <div class="form-group">
               <label>Description</label>
-              <textarea class="form-control" id="modal-description" rows="3">
-
-              </textarea>
+              <textarea class="form-control" id="modal-description" rows="3"></textarea>
+            </div>
+            <div class="row mt-2">
+              <div class="col-sm-3 d-sm-flex align-items-center">
+                <label class="m-sm-0">Deadline</label>
+                <input type="date" id="deadline" class="form-control ml-sm-2">
+              </div>
             </div>
             <div class="form-group d-inline-flex">
               <label>Completed</label>
               <div class="mt-1 ml-2">
                 <input
-                id="modal-completed"
-                type="checkbox"
-              />
+                  id="modal-completed"
+                  type="checkbox"
+                />
               </div>
             </div>
           </form>
@@ -161,15 +167,27 @@
               </button>
             </div>
           </div>
+          <div class="row mt-2">
+            <div class="col-sm-3 d-sm-flex align-items-center">
+              <label class="m-sm-0">Deadline</label>
+              <input
+                type="date"
+                id="add-deadline" 
+                class="form-control ml-sm-2"
+              >
+            </div>
+          </div>
+          
         </form>
       </div>
 
       <div class="mt-5">
-        <table class="table table-striped" id="table">
+        <table class="table table-striped table-dark" id="table">
           <thead>
             <tr>
               <th scope="col">Todo</th>
               <th scope="col">Description</th>
+              <th scope="col">Deadline</th>
               <th scope="col">
                 <div class="d-flex justify-content-center">
                   Completed
